--- a/ApiGateway/apigateway.service
+++ b/ApiGateway/apigateway.service
@@ -1,12 +1,11 @@
 [Unit]
-Description=API Gateway Service Application
+Description=Quote Service Application
 After=network.target
 
 [Service]
-Environment="QUOTES_API=http://localhost:5000"
 User=vyankykalantri
-WorkingDirectory=var/www/bryandixon/simple-microservice-example/ApiGateway/
-ExecStart=npm run start
+WorkingDirectory=/var/www/simple-microservice-example/QuoteService
+ExecStart=/bin/bash -c  '/var/www/simple-microservice-example/QuoteService/venv/bin/python /var/www/simple-microservice-example/QuoteService/main.py'
 Restart=always
 
 [Install]
