--- a/QuoteService/quote.service
+++ b/QuoteService/quote.service
@@ -1,11 +1,12 @@
 [Unit]
-Description=Quote Service Application
+Description=API Gateway Service Application
 After=network.target
 
 [Service]
+Environment="QUOTES_API=http://localhost:5000"
 User=vyankykalantri
-WorkingDirectory=/home/vyankykalantri/simple-microservice-example/QuoteService/
-ExecStart=/home/vyankykalantri/simple-microservice-example/QuoteService/venv/bin/python /home/vyankykalantri/simple-microservice-example/QuoteService/main.py
+WorkingDirectory=/var/www/simple-microservice-example/ApiGateway
+ExecStart=npm run start
 Restart=always
 
 [Install]
