--- a/ApiGateway/apigateway.service
+++ b/ApiGateway/apigateway.service
@@ -1,11 +1,12 @@
 [Unit]
-Description=Quote Service Application
+Description=API Gateway Service Application
 After=network.target
 
 [Service]
+Environment="QUOTES_API=http://localhost:5000"
 User=vyankykalantri
-WorkingDirectory=/var/www/simple-microservice-example/QuoteService
-ExecStart=/bin/bash -c  '/var/www/simple-microservice-example/QuoteService/venv/bin/python /var/www/simple-microservice-example/QuoteService/main.py'
+WorkingDirectory=/var/www/simple-microservice-example/ApiGateway
+ExecStart=npm run start
 Restart=always
 
 [Install]
